k8s/profiles/split-pgbouncer/web-database-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: opsknight-web, namespace: opsknight }
spec:
  template:
    spec:
      containers:
        - name: opsknight-app
